# siem/service/src/main/java/bsep/sw/hateoas/alarm/AlarmResponseData.java
@@ -1,9 +1,9 @@
 package bsep.sw.hateoas.alarm;
 
 
-        import bsep.sw.domain.Alarm;
-        import bsep.sw.hateoas.ResourceTypes;
-        import bsep.sw.hateoas.resource.response.ResourceResponseData;
+import bsep.sw.domain.Alarm;
+import bsep.sw.hateoas.ResourceTypes;
+import bsep.sw.hateoas.resource.response.ResourceResponseData;
 
 public class AlarmResponseData extends ResourceResponseData {
 
@@ -12,6 +12,7 @@ public class AlarmResponseData extends ResourceResponseData {
         data.id = alarm.getId();
         data.type = ResourceTypes.ALARM_TYPE;
         data.attributes = AlarmResponseAttributes.fromDomain(alarm);
+        data.relationships = AlarmResponseRelationships.fromDomain(alarm);
         return data;
     }
 
