# siem/service/src/main/java/bsep/sw/hateoas/resource/response/ResourceResponseData.java
@@ -1,7 +1,9 @@
 package bsep.sw.hateoas.resource.response;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
+@JsonInclude(JsonInclude.Include.NON_NULL)
 public abstract class ResourceResponseData {
 
     @JsonProperty("id")
@@ -12,5 +14,8 @@ public abstract class ResourceResponseData {
 
     @JsonProperty("attributes")
     public ResourceResponseAttributes attributes;
+
+    @JsonProperty("relationships")
+    public ResourceResponseRelationships relationships;
 
 }
